# mciwb

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  Pipfile  README.md  README.rst  catalog-info.yaml  demo.ipynb  demo.py  pyproject.toml  run-tests.sh  setup.cfg  setup.py  sonar-project.properties  switcher.json  todo.md  versions.txt  video.md
.devcontainer/: Dockerfile  devcontainer.json  local_build.sh
.github/: CONTRIBUTING.md  CONTRIBUTING.rst  dependabot.yml
.github/pages/: make_switcher.py
.github/workflows/: _check.yml  _container.yml  _dist.yml  _docs.yml  _pypi.yml  _release.yml  _test.yml  _tox.yml  ci.yml  code.yml  container_tests.sh  docs.yml  docs_clean.yml  linkcheck.yml  periodic.yml  sonar.yml
0.2.4b2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.2.4b2/.doctrees/: environment.pickle
0.2.4b2/_modules/: index.html
0.2.4b2/_sources/: explanations.md.txt
0.2.4b2/_static/: documentation_options.js
0.2.4b2/explanations/: coordinates.html  decisions.html  docs-structure.html  mcee.html  mcipc.html  scope.html  server-config.html
0.2.4b2/how-to/: backup.html  completion.html  contribute.html  coordinates.html  extensions.html  run-container.html  startup.html  troubleshooting.html  wsl2.html
0.2.4b2/reference/: api.html  demo.html
0.2.4b2/tutorials/: 00-prereq.html  01-setup.html  02-orientation.html  03-variables.html  04-loops.html  05-functions.html  05a-modules.html  06-if-then.html  07-lists.html  08-classes.html  09-dictionaries.html  10-threading.html  11-switches.html  12-signs.html  13-structures.html  installation.html
0.5/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.5.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.5.1/.doctrees/: environment.pickle  explanations.doctree  tutorials.doctree
0.5.1/_static/: documentation_options.js
0.5.1/reference/: contributing.html  old_readme.html
0.5.1/tutorials/: 01-intro.html
0.5.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.5.2/reference/: old_readme.html  (+1 more)
0.5.3/: explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
0.6.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.6.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.6.2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html
0.6.3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.7.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  reference.html  search.html  tutorials.html
0.7.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.8/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.8.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.8.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.8.3/: index.html  py-modindex.html
0.8.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.8.5/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.8.6/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.9.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.9.0b1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.9.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
blocks/: gate.json  ground.json  inv.json
containers/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
copier-template/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
dev/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
docs/: conf.py  explanations.rst  how-to.rst  index.rst  reference.rst  tutorials.rst
gilesknap-patch-1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
gilesknap-patch-2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
gilesknap-patch-3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
mciwb/: _version_git.py  backup.py  copy.py  player.py
pypi-fix/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
skeleton-merge/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
src/: demo.py
test/: conftest.py  test_copy.py
tests/: conftest.py  cube.py  mockclient.py  mockplayer.py  server.py  test_backup.py  test_cli.py  test_copy.py
(+1779 files in other folders)
