[metadata]
name = mciwb
description = Minecraft Interactive world builder
url = https://github.com/giles/mciwb
author = Giles Knap
author_email = gilesknap@gmail.com
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9

[options]
packages = find:

install_requires =
    numpy
    mcwb>=0.1.0

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[options.extras_require]
# For development tests/docs
dev =
    black
    isort
    pytest-cov
    pytest-mypy
    flake8<3.9.3
    pytest-flake8
    pytest-black
    flake8-isort
    sphinx-rtd-theme-github-versions
    importlib-metadata
    docker


# If you want to include data files in packages,
# either define [options.package_data] or
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.entry_points]
# Include a command line script
console_scripts =
    demo = demo:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator
    F722, # allow Annotated[typ, some_func("some string")]
# exclude =

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --doctest-modules --doctest-glob="*.rst"
    # comment next line for debugging and uncomment for code coverage reporting
    #--cov=mciwb --cov-report term --cov-report xml:cov.xml

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
