[metadata]
name = mciwb
description = Minecraft Interactive world builder
url = https://github.com/gilesknap/mciwb
author = Giles Knap
author_email = gilesknap@gmail.com
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
plaforrms =
    Linux
    Windows
    Mac

[options]
python_requires = >=3.9
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src

setup_requires =
    setuptools_scm[toml]>=6.2
    
install_requires =
    numpy
    typer
    mcwb>=0.2.0
    ipython
    docker

[options.extras_require]
# For development tests/docs
dev =
    black==22.3.0
    flake8-isort
    isort>5.0
    mypy
    pre-commit
    pytest-cov
    sphinx-rtd-theme-github-versions
    tox
    setuptools_scm[toml]>=6.2
    mock
    types-setuptools

[options.packages.find]
where = src
# Don't include our tests directory in the distribution
exclude = 
    tests

# If you want to include data files in packages,
# either define [options.package_data] or
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.entry_points]
# Include a command line script
console_scripts =
    mciwb = mciwb.__main__:cli

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,  # support typing.overload decorator
    F722,  # allow Annotated[typ, some_func("some string")]
exclude =
    .tox
    .venv
    docs/code/*

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=mciwb --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = 
    error
    # its difficult to ensure all sockets are closed in tests so ignore
    ignore:.*socket.*:ResourceWarning
    ignore::DeprecationWarning

# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths =
    tests

[coverage:run]
data_file = /tmp/gphotomciwbs_sync.coverage
# Use tox to provide parallel linting and testing
# NOTE that we pre-install all tools in the dev dependencies (including tox).
# Hence the use of allowlist_externals instead of using the tox virtualenvs.
# This ensures a match between developer time tools in the IDE and tox tools.
[tox:tox]
minversion = 3.7
skipsdist=true
skipinstall=true

[testenv:{pre-commit,mypy,pytest,docs}]
setenv =
    QT_QPA_PLATFORM = offscreen
allowlist_externals = 
    pytest 
    pre-commit
    mypy
    sphinx-build
commands =
    pytest: pytest tests {posargs}
    mypy: mypy src tests {posargs}
    pre-commit: pre-commit run --all-files {posargs}
    docs: sphinx-build -EWT --keep-going docs build/html {posargs} 
